<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:elevation="4dp"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/threadUps"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:layout_marginLeft="@dimen/layout_horizontal_margin"
                android:layout_marginRight="@dimen/layout_horizontal_margin"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:text="@string/up_textView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlue500" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:layout_marginLeft="@dimen/layout_horizontal_margin"
                android:layout_marginRight="@dimen/layout_horizontal_margin"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/threadTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thread_title_textView"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPurple500" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/threadCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_between_text"
                        android:layout_marginRight="@dimen/space_between_text"
                        android:text="@string/created_textView"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/byTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_between_text"
                        android:layout_marginRight="@dimen/space_between_text"
                        android:text="@string/by_textView"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/threadAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_textView"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/threadCommentsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space_between_text"
                        android:layout_marginRight="@dimen/space_between_text"
                        android:text="@string/comments_number_textView"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/threadCommentsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comments_textView"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>